--- a/orb.yml
+++ b/orb.yml
@@ -3,7 +3,7 @@ version: 2.1
 description: Delta Reek reports
 
 orbs:
-  dscar: naokikimura/dscar@0.5.1
+  dscar: naokikimura/dscar@0.5.4
 
 executors:
   default:
@@ -142,12 +142,24 @@ commands:
   execute:
     description: Calculate the difference of Reek results between HEAD branch and BASE branch
     parameters:
+      has-reconstructed:
+        description: Specify true if `compare-url/reconstruct` has not been executed yet
+        type: boolean
+        default: false
+      attach-compare-url-workspace:
+        description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
+        type: boolean
+        default: false
       analyze:
         description: Specify analysis steps
         type: steps
         default:
           - analyze:
               prepare: []
+      analysis-results-path:
+        description: Specify the path to save the analysis results if you need to change it
+        type: string
+        default: "/tmp/analysis-results"
       calculate:
         description: Specify the steps for calculating the difference
         type: steps
@@ -157,13 +169,21 @@ commands:
         description: Specify the value of the path parameter in the store_test_results step if you need to change it
         type: string
         default: "/tmp/test-results"
+      project-path:
+        description: "Absolute path to your project's base directory, necessary for running git commands (default: job’s working_directory)"
+        type: string
+        default: ""
     steps:
       - run: sudo gem install reek
       - dscar/execute:
+          has-reconstructed: << parameters.has-reconstructed >>
+          attach-compare-url-workspace: << parameters.attach-compare-url-workspace >>
           analysis-name: Reek
           analyze: << parameters.analyze >>
+          analysis-results-path: << parameters.analysis-results-path >>
           calculate: << parameters.calculate >>
           test-results-path: << parameters.test-results-path >>
+          project-path: << parameters.project-path >>
 
 jobs:
   analyze:
@@ -175,6 +195,14 @@ jobs:
         default: default
       is-target-branch-base:
         description: Check-out the BASE branch if true is specified
+        type: boolean
+        default: false
+      has-reconstructed:
+        description: Specify true if `compare-url/reconstruct` has not been executed yet
+        type: boolean
+        default: false
+      attach-compare-url-workspace:
+        description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
         type: boolean
         default: false
       analyze:
@@ -194,6 +222,8 @@ jobs:
           is-target-branch-base: << parameters.is-target-branch-base >>
       - dscar/checkout-analysis-target:
           is-target-branch-base: << parameters.is-target-branch-base >>
+          has-reconstructed: << parameters.has-reconstructed >>
+          attach-compare-url-workspace: << parameters.attach-compare-url-workspace >>
       - steps: << parameters.analyze >>
       - store_test_results:
           path: << parameters.analysis-results-path >>
@@ -232,18 +262,30 @@ jobs:
       - store_test_results:
           path: << parameters.test-results-path >>
   execute:
-    description: Calculate the difference of Reek results between HEAD branch and BASE branch
+    description: Calculate the difference of Brakeman results between HEAD branch and BASE branch
     parameters:
       executor:
         description: Specify the image used to execute analysis
         type: executor
         default: default
+      has-reconstructed:
+        description: Specify true if `compare-url/reconstruct` has not been executed yet
+        type: boolean
+        default: false
+      attach-compare-url-workspace:
+        description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
+        type: boolean
+        default: false
       analyze:
         description: Specify analysis steps
         type: steps
         default:
           - analyze:
               prepare: []
+      analysis-results-path:
+        description: Specify the path to save the analysis results if you need to change it
+        type: string
+        default: "/tmp/analysis-results"
       calculate:
         description: Specify the steps for calculating the difference
         type: steps
@@ -253,9 +295,23 @@ jobs:
         description: Specify the value of the path parameter in the store_test_results step if you need to change it
         type: string
         default: "/tmp/test-results"
+      should-save-analysis-results-as-artifacts:
+        description: Specify true if analysis results should be saved as artifacts
+        type: boolean
+        default: false
     executor: << parameters.executor >>
     steps:
       - execute:
+          has-reconstructed: << parameters.has-reconstructed >>
+          attach-compare-url-workspace: << parameters.attach-compare-url-workspace >>
           analyze: << parameters.analyze >>
+          analysis-results-path: << parameters.analysis-results-path >>
           calculate: << parameters.calculate >>
           test-results-path: << parameters.test-results-path >>
+      - store_test_results:
+          path: << parameters.test-results-path >>
+      - when:
+          condition: << parameters.should-save-analysis-results-as-artifacts >>
+          steps:
+            - store_artifacts:
+                path: << parameters.analysis-results-path >>
