--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -3,7 +3,7 @@ version: 2.1
 description: Delta Reek reports
 
 orbs:
-  dscar: naokikimura/dscar@0.7.1
+  dscar: naokikimura/dscar@0.8.0
 
 executors:
   default:
@@ -13,10 +13,16 @@ executors:
         description: Specify the image used to execute Reek
         type: string
         default: circleci/ruby:latest-node
-      resource_class:
-        description: Amount of CPU and RAM allocated to each container in a job.
+      project-git_url:
+        description: "Please set << pipeline.project.git_url >>"
         type: string
-        default: small
+      git-base_revision:
+        description: "Please set << pipeline.git-base_revision >>"
+        type: string
+      git-revision:
+        description: "Please set << pipeline.git-revision >>"
+        type: string
     docker:
       - image: << parameters.docker-image >>
-    resource_class: << parameters.resource_class >>
+    environment:
+      CIRCLE_COMPARE_URL: << parameters.project-git_url >>/compare/<< parameters.git-base_revision >>..<< parameters.git-revision >>
