--- a/src/jobs/@jobs.yml
+++ b/src/jobs/@jobs.yml
@@ -5,16 +5,12 @@ analyze:
       description: Specify the image used to execute analysis
       type: executor
       default: default
+    resource_class:
+      description: Amount of CPU and RAM allocated to each container in a job.
+      type: string
+      default: small
     is-target-branch-base:
       description: Check-out the BASE branch if true is specified
-      type: boolean
-      default: false
-    has-reconstructed:
-      description: Specify true if `compare-url/reconstruct` has not been executed yet
-      type: boolean
-      default: false
-    attach-compare-url-workspace:
-      description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
       type: boolean
       default: false
     analyze:
@@ -34,54 +30,22 @@ analyze:
       description: Specify the environment variable name where the VCS (Version Control System) API token is set.
       type: env_var_name
       default: GITHUB_TOKEN
+    circle_compare_url-path:
+      description: "Specify the path of `CIRCLE_COMPARE_URL.txt` if you are using `iynere/compare-url` orb"
+      type: string
+      default: ""
   executor: << parameters.executor >>
+  resource_class: << parameters.resource_class >>
   steps:
     - dscar/analyze-and-evaluate:
         is-target-branch-base: << parameters.is-target-branch-base >>
-        has-reconstructed: << parameters.has-reconstructed >>
-        attach-compare-url-workspace: << parameters.attach-compare-url-workspace >>
         analysis-name: &analysis-name Reek
         analyze: << parameters.analyze >>
         analysis-results-path: << parameters.analysis-results-path >>
         test-results-path: << parameters.test-results-path >>
         vcs-api-token: << parameters.vcs-api-token >>
-calculate:
-  description: |
-    Calculate the difference between the analysis results and then evaluate the result
+        circle_compare_url-path: << parameters.circle_compare_url-path >>
 
-    Use the [checkstyle-reports-combiner][1] command to calculate the difference
-
-    [1]: https://www.npmjs.com/package/junit-reports-combiner
-  parameters:
-    executor:
-      description: Specify the image used to execute analysis
-      type: executor
-      default: default
-    calculate:
-      description: Specify the steps for calculating the difference
-      type: steps
-      default:
-        - dscar/calculate
-    analysis-results-path:
-      description: Specify the path to save the analysis results if you need to change it
-      type: string
-      default: "/tmp/analysis-results"
-    test-results-path:
-      description: Specify the value of the path parameter in the store_test_results step if you need to change it
-      type: string
-      default: "/tmp/test-results"
-    vcs-api-token:
-      description: Specify the environment variable name where the VCS (Version Control System) API token is set.
-      type: env_var_name
-      default: GITHUB_TOKEN
-  executor: << parameters.executor >>
-  steps:
-    - dscar/calculate-and-evaluate:
-        analysis-name: *analysis-name
-        calculate: << parameters.calculate >>
-        analysis-results-path: << parameters.analysis-results-path >>
-        test-results-path: << parameters.test-results-path >>
-        vcs-api-token: << parameters.vcs-api-token >>
 execute:
   description: Calculate the difference of Reek results between HEAD branch and BASE branch and then evaluate the result
   parameters:
@@ -89,14 +53,10 @@ execute:
       description: Specify the image used to execute analysis
       type: executor
       default: default
-    has-reconstructed:
-      description: Specify true if `compare-url/reconstruct` has not been executed yet
-      type: boolean
-      default: false
-    attach-compare-url-workspace:
-      description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
-      type: boolean
-      default: false
+    resource_class:
+      description: Amount of CPU and RAM allocated to each container in a job.
+      type: string
+      default: small
     analyze:
       description: Specify analysis steps
       type: steps
@@ -120,15 +80,19 @@ execute:
       description: Specify the environment variable name where the VCS (Version Control System) API token is set.
       type: env_var_name
       default: GITHUB_TOKEN
+    circle_compare_url-path:
+      description: "Specify the path of `CIRCLE_COMPARE_URL.txt` if you are using `iynere/compare-url` orb"
+      type: string
+      default: ""
   executor: << parameters.executor >>
+  resource_class: << parameters.resource_class >>
   steps:
     - install-analyzer
     - dscar/execute-and-evaluate:
-        has-reconstructed: << parameters.has-reconstructed >>
-        attach-compare-url-workspace: << parameters.attach-compare-url-workspace >>
         analysis-name: *analysis-name
         analyze: << parameters.analyze >>
         analysis-results-path: << parameters.analysis-results-path >>
         calculate: << parameters.calculate >>
         test-results-path: << parameters.test-results-path >>
         vcs-api-token: << parameters.vcs-api-token >>
+        circle_compare_url-path: << parameters.circle_compare_url-path >>
