--- a/src/commands/analyze.yml
+++ b/src/commands/analyze.yml
@@ -31,6 +31,10 @@ parameters:
     type: enum
     enum: ["/dev/stdout", "/dev/stderr", "/dev/null"]
     default: "/dev/null"
+  max-procs:
+    description: Specify the maximum number of processes to run at the same time
+    type: integer
+    default: 1
 steps:
   - dscar/analyze:
       step-name: Analyze code statically using Reek
@@ -57,3 +61,4 @@ steps:
       result-path: << parameters.result-path >>
       no-output-timeout: << parameters.no-analysis-output-timeout >>
       redirecting-output: << parameters.redirecting-output >>
+      max-procs: << parameters.max-procs >>
